<resources>
    <string name="app_name">Nam-Nam</string>

    <!-- Accessibility -->
    <string name="drawer_close">Drawer Close</string>
    <string name="drawer_open">Drawer Open</string>

    <!-- Toolbar actions -->
    <string name="action_search">Search</string>
    <string name="action_toggle_view">Toggle View</string>
    <string name="action_favorite">Favorite</string>

    <!-- NavigationView menus -->
    <string name="navigation_recipes">Recipes</string>
    <string name="navigation_ingredients">Ingredients</string>
    <string name="navigation_virtual_basket">Virtual Baskets</string>
    <string name="navigation_settings">Settings</string>

    <!-- Activity Names -->
    <string name="title_activity_recipe">Recipe</string>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_feedback">Feedback</string>
    <string name="title_activity_recipe_search">Recipe Search</string>
    <string name="title_activity_recipes">Recipes</string>
    <string name="title_activity_ingredients">Ingredients</string>
    <string name="title_activity_virtual_basket">Virtual Basket</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Search -->
    <string name="search_hint">Search</string>
    <string name="action_clear_search_text">Clear Search</string>

    <!-- Navigation mItems -->
    <string name="navigation_help">Help</string>
    <string name="navigation_feedback">Feedback</string>

    <!-- Empty List -->
    <string name="empty_list_label">No mItems in here</string>
    <string name="empty_list_content_description">Empty List</string>
    <string name="title_activity_ingredient">IngredientActivity</string>

    <!-- Dialog Strings -->
    <string name="dialog_clear_recipes_title">Clear Recipes Cache?</string>
    <string name="dialog_clear_recipes_summary">Are you sure you want to delete the recipes cache? This action cannot be undone.</string>
    <string name="dialog_clear_ingredients_title">Clear Ingredients Cache?</string>
    <string name="dialog_clear_ingredients_summary">Are you sure you want to delete the mIngredients cache? This action cannot be undone.</string>
    <string name="dialog_ingredient_loading_header">Loading Ingredient</string>
    <string name="dialog_ingredient_loading_subheader">Please wait while loading ingredient &#8230;</string>
    <string name="dialog_no_internet_header">No connection</string>
    <string name="dialog_no_internet_subheader">You need to connect to internet and open the recipe for us to cache the data so you can view it offline.</string>
    <string name="dialog_neutral_button_label">Okay</string>
    <string name="dialog_recipe_loading_subheader">Fetching recipe &#8230;</string>
    <string name="dialog_recipe_loading_header">Loading</string>

    <!-- Actions -->
    <string name="action_settings">Settings</string>
    <string name="action_delete_all">Delete All</string>
    <string name="snackbar_no_internet">No connection</string>
    <string name="title_activity_recommended_recipes">RecommendedRecipesActivity</string>

    <string name="action_add_to_virtual_basket">Add to Virtual Basket</string>
    <string name="recipe_image_content_description">Recipe\'s image</string>
    <string name="activity_title_help">Help</string>
    <string name="activity_title_feedback">Feedback</string>
    <string name="no_results_found">No results found</string>
    <string name="activity_splash_loading">Preparing things&#8230;</string>
    <string name="title_activity_virtual_baskets">Virtual Baskets</string>
    <string name="action_delete_virtual_baskets">Delete all</string>
    <string name="action_delete_virtual_basket">Delete</string>
    <string name="preference_caches">Cache</string>

    <!-- Preference Fragment -->
    <string name="preference_clear_recipes_cache_key">clear_recipes_key</string>
    <string name="preference_clear_recipes_cache_title">Clear Recipe Cache</string>
    <string name="preference_clear_recipes_cache_summary">This will free all the resources the recipes cache are occupying</string>
    <string name="preference_clear_ingredients_cache_key">clear_ingredients_key</string>
    <string name="preference_clear_ingredients_cache_title">Clear Ingredient Cache</string>
    <string name="preference_clear_ingredients_cache_summary">This will free all the resources the mIngredients cache are occupying</string>
    <string name="title_activity_test">TestActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_add_ingredient_to_virtual_basket">Add Ingredient</string>

</resources>